fix: Don't let the header bar grow too wide
It's possible for the title of the app to push the header bar buttons
off the screen. This is wrong and shouldn't be allowed -- instead, the
title should clip itself. Ideally it should be ellipsized, but I can't
get that working so it just clips.

Whatever.

--- a/Header/Header.module.css
+++ b/Header/Header.module.css
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: space-between;
   color: var(--header-button-color, currentColor);
+  max-width: 100vw;
 
   background-color: var(
     --header-background-color,
@@ -13,6 +14,9 @@
   h1 {
     padding: 8px;
     margin: 8px;
+    flex: 1 1 auto;
+    min-width: 0px;
+    overflow-x: hidden;
 
     a {
       display: flex;
